fix: eliminate jumps when switching tabs

--- a/pages/gifts/style.css
+++ b/pages/gifts/style.css
@@ -241,6 +241,7 @@ body {
   flex-wrap: wrap;
   gap: 12px;
   justify-content: center;
+  min-height: 450px;
 }
 .gift__cards--hidden {
   display: none;
